--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  <!-- CONTENU PAGE -->
 <main>
 
-    <section class="titre_page">
+<section class="titre_page">
       <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
       <p>En plein centre ville ou en pleine nature</p>
 
@@ -98,13 +98,12 @@
 </div>
 </div>
 
-
-
   </div>
-    </section>
+</section>
 
 
-    <section id="fond_populaire">
+<section id="heb_pop">
+<section id="fond_populaire">
       <h2>Les plus populaires</h2>
 
       <div class="fond_vignette_pop">
@@ -112,40 +111,42 @@
         <div class="description_vignette_pop">
           <h3>Hôtel Le Soleil du matin</h3>
           <p>Nuit à partir de 128€</p>
+          </div>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
         </div>
         </div>
-      </div>
-
 
       <div class="fond_vignette_pop">
         <img class="hebergements_pop" src="images/hebergements/small/hotel_coeur_eau.jpg" alt=photo_hotel_coeur_eau/>
         <div class="description_vignette_pop">
           <h3>Au cœur de l'eau Chambres d'hôtes</h3>
           <p>Nuit à partir de 71€</p>
+          </div>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
-        </div>
       </div> 
       </div>
-
 
       <div class="fond_vignette_pop">
         <img class="hebergements_pop" src="images/hebergements/small/hotel_bleu_blanc.jpg" alt=photo_hotel_bleu_blanc/>
         <div class="description_vignette_pop">
           <h3>Hôtel Tout bleu et Blanc</h3>
           <p>Nuit à partir de 68€</p>
+          </div>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
-        </div>
       </div>
       </div>    
 
-    </section>
+</section>
 
-    <section id="fond_hebergement">
+
+<section id="fond_hebergement">
+
       <h2 id="ancre_hebergement">Hébergements à Marseille</h2>
+
+      <div id="all_vignettes_heb">
 
           <div class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/auberge_cannebiere.jpg" alt=photo_auberge_cannebiere/>
@@ -154,9 +155,9 @@
           <p>Nuit à partir de 25€</p>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
-        </div>
-        </div>
-        </div>
+          </div>
+          </div>
+          </div>
 
           <div class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_port.jpg" alt=photo_hotel_port/>
@@ -165,9 +166,9 @@
           <p>Nuit à partir de 52€</p>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-        </div>
-        </div>
-        </div>
+          </div>
+          </div>
+          </div>
 
           <div class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_mouette.jpg" alt=photo_hotel_mouette/>
@@ -176,9 +177,9 @@
           <p>Nuit à partir de 76€</p>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
-        </div>
-        </div>
-        </div>
+          </div>
+          </div>
+          </div>
 
            <div class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_mer.jpg" alt=photo_hotel_mer/>
@@ -187,9 +188,9 @@
           <p>Nuit à partir de 46€</p>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
-        </div>
-        </div>
-        </div>
+          </div>
+          </div>
+          </div>
 
            <div class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/auberge_panier.jpg" alt=photo_auberge_panier/>
@@ -198,9 +199,9 @@
           <p>Nuit à partir de 23€</p>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
-        </div>
-        </div>
-        </div>
+          </div>
+          </div>
+          </div>
 
            <div class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_amina.jpg" alt=photo_hotel_amina/>
@@ -209,69 +210,75 @@
           <p>Nuit à partir de 96€</p>
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-        </div>
-        </div>
+          </div>
+          </div>
+          </div>
         </div>
 
           <a href="#">Afficher plus</a>
 
-    </section>
+</section>
+</section>
 
-    <section id="fond_activite">
+<section id="fond_activite">
       <h2 id="ancre_activite">Activités à Marseille</h2>
 
-          <div class="fond_vignette_act">
+      <div id="all_vignettes_act">
+
+          <div class="fond_vignette_act_1">
             <img class="activites_ville" src="images/activites/small/vieux_port.jpg" alt=photo_vieux_port/>
           <div class="description_vignette_act">
           <h3>Vieux Port</h3>
           </div>
         </div>
+    
 
-          <div class="fond_vignette_act">
+          <div class="fond_vignette_act_2">
             <img class="activites_ville" src="images/activites/small/fort_pomegues.jpg" alt=photo_fort_pomegues/>
           <div class="description_vignette_act">
           <h3>Fort de Pomègues</h3>
           </div>
         </div>
 
-          <div class="fond_vignette_act">
+          <div class="fond_vignette_act_3">
             <img class="activites_ville" src="images/activites/small/iles_frioul.jpg" alt=photo_iles_frioul/>
           <div class="description_vignette_act">
           <h3>Iles du Frioul</h3>
           </div>
         </div>
 
-          <div class="fond_vignette_act">
+          <div class="fond_vignette_act_1">
             <img class="activites_ville" src="images/activites/small/parc_calanques.jpg" alt=photo_parc_calanques/>
           <div class="description_vignette_act">
           <h3>Parc national des Calanques</h3>
           </div>
         </div>
 
-          <div class="fond_vignette_act">
+          <div class="fond_vignette_act_3">
             <img class="activites_ville" src="images/activites/small/ND_garde.jpg" alt=photo_ND_garde/>
           <div class="description_vignette_act">
           <h3>Notre-Dame-de-la-Garde</h3>
           </div>
         </div>
 
-          <div class="fond_vignette_act">
+          <div class="fond_vignette_act_2">
             <img class="activites_ville" src="images/activites/small/parc_longchamp.jpg" alt=photo_parc_longchamp/>
           <div class="description_vignette_act">
           <h3>Parc Longchamp</h3>
           </div>
         </div>
+      </div>
 
-    </section>
+</section>
 
 </main>
 
   <!-- PIED PAGE -->
   <footer>
 
-    <div class="footer">
+      <div class="footer">
       <h3>A propos</h3>
-    <ul>
+      <ul>
         <li><a href="#">Fonctionnement du site</a></li>
         <li><a href="#">Conditions générales de vente</a></li>
         <li><a href="#">Données et confidentialité</a></li>
@@ -283,7 +290,7 @@
     <ul>
         <li><a href="#">Charte qualité</a></li>
         <li><a href="#">Soumettre votre hôtel</a></li>
-      </ul>
+    </ul>
     </div>
 
     <div class="footer">
@@ -291,7 +298,7 @@
     <ul>
         <li><a href="#">Centre d'aide</a></li>
         <li><a href="#">Nous contacter</a></li>
-      </ul>
+    </ul>
     </div>
 
       </footer>
