--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Reservia</title>
 </head>
 <body>
@@ -54,39 +55,39 @@
 <div id="filtres"> 
 
   <div class="filtre_curseur">
-      <div class="bulle_filtre">
+      <a href="#"><div class="bulle_filtre">
           <i class="fas fa-money-bill-wave"></i>
       </div>
       <div class="form_filter">
-        <div class="name_filter">Economique</div> 
-      </div>
+        <div class="name_filter"><b>Economique</b></div> 
+      </div></a>
   </div>
 
   <div class="filtre_curseur">
-      <div class="bulle_filtre">
+      <a href="#"><div class="bulle_filtre">
           <i class="fas fa-child"></i>
       </div>
       <div class="form_filter">
         <div class="name_filter">Familial</div> 
-      </div>
+      </div></a>
   </div>
 
   <div class="filtre_curseur">
-      <div class="bulle_filtre">
+      <a href="#"><div class="bulle_filtre">
           <i class="fas fa-heart"></i>
       </div>
       <div class="form_filter">
         <div class="name_filter">Romantique</div> 
-      </div>
+      </div></a>
   </div>
 
   <div class="filtre_curseur">
-      <div class="bulle_filtre">
+      <a href="#"><div class="bulle_filtre">
           <i class="fas fa-dog"></i>
       </div>
       <div class="form_filter">
         <div class="name_filter">Animaux autorisés</div> 
-      </div>
+      </div></a>
   </div>
 </div>
 
@@ -101,45 +102,51 @@
   </div>
 </section>
 
+<!-- Les plus populaires -->
+
+
 
 <section id="heb_pop">
 <section id="fond_populaire">
-      <h2>Les plus populaires</h2>
+      <div id="titre_pop"><h2>Les plus populaires</h2>
+      <i class="fas fa-chart-line fa-2x"></i></div>
 
-      <div class="fond_vignette_pop">
+      <a href="#"><div class="fond_vignette_pop">
         <img class="hebergements_pop" src="images/hebergements/small/hotel_soleil.jpg" alt=photo_hotel_soleil_du_matin />
         <div class="description_vignette_pop">
           <h3>Hôtel Le Soleil du matin</h3>
           <p>Nuit à partir de 128€</p>
           </div>
-          <div class="avis">
+        <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
         </div>
-        </div>
+        </div></a>
 
-      <div class="fond_vignette_pop">
+      <a href="#"><div class="fond_vignette_pop">
         <img class="hebergements_pop" src="images/hebergements/small/hotel_coeur_eau.jpg" alt=photo_hotel_coeur_eau/>
         <div class="description_vignette_pop">
           <h3>Au cœur de l'eau Chambres d'hôtes</h3>
           <p>Nuit à partir de 71€</p>
           </div>
           <div class="avis">
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
+          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
       </div> 
-      </div>
+      </div></a>
 
-      <div class="fond_vignette_pop">
+      <a href="#"><div class="fond_vignette_pop">
         <img class="hebergements_pop" src="images/hebergements/small/hotel_bleu_blanc.jpg" alt=photo_hotel_bleu_blanc/>
         <div class="description_vignette_pop">
           <h3>Hôtel Tout bleu et Blanc</h3>
           <p>Nuit à partir de 68€</p>
           </div>
           <div class="avis">
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
+          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
       </div>
-      </div>    
+      </div></a>    
 
 </section>
+
+<!-- Hebergements -->
 
 
 <section id="fond_hebergement">
@@ -148,18 +155,18 @@
 
       <div id="all_vignettes_heb">
 
-          <div class="fond_vignette_heb">
+          <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/auberge_cannebiere.jpg" alt=photo_auberge_cannebiere/>
           <div class="description_vignette_heb">
           <h3>Auberge La Cannebière</h3>
           <p>Nuit à partir de 25€</p>
           <div class="avis">
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
+          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
           </div>
-          </div>
-          </div>
+          </div></a>
+        
 
-          <div class="fond_vignette_heb">
+          <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_port.jpg" alt=photo_hotel_port/>
           <div class="description_vignette_heb">
           <h3>Hôtel du Port</h3>
@@ -167,43 +174,39 @@
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
           </div>
-          </div>
-          </div>
+          </div></a>
 
-          <div class="fond_vignette_heb">
+          <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_mouette.jpg" alt=photo_hotel_mouette/>
           <div class="description_vignette_heb">
           <h3>Hôtel Les mouettes</h3>
           <p>Nuit à partir de 76€</p>
           <div class="avis">
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
+          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
           </div>
-          </div>
-          </div>
+          </div></a>
 
-           <div class="fond_vignette_heb">
+          <a href="#"class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_mer.jpg" alt=photo_hotel_mer/>
           <div class="description_vignette_heb">
           <h3>Hôtel de la mer</h3>
           <p>Nuit à partir de 46€</p>
           <div class="avis">
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
+          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
           </div>
-          </div>
-          </div>
+          </div></a>
 
-           <div class="fond_vignette_heb">
+          <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/auberge_panier.jpg" alt=photo_auberge_panier/>
           <div class="description_vignette_heb">
           <h3>Auberge Le Panier</h3>
           <p>Nuit à partir de 23€</p>
           <div class="avis">
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color:#F2F2F2"></i>
+          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
           </div>
-          </div>
-          </div>
+          </div></a>
 
-           <div class="fond_vignette_heb">
+          <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_amina.jpg" alt=photo_hotel_amina/>
           <div class="description_vignette_heb">
           <h3>Hôtel Chez Amina</h3>
@@ -211,8 +214,7 @@
           <div class="avis">
           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
           </div>
-          </div>
-          </div>
+          </div></a>
         </div>
 
           <a href="#">Afficher plus</a>
@@ -220,53 +222,49 @@
 </section>
 </section>
 
+<!-- Activités -->
+
 <section id="fond_activite">
       <h2 id="ancre_activite">Activités à Marseille</h2>
 
       <div id="all_vignettes_act">
 
-          <div class="fond_vignette_act_1">
+          <a href="#" class="fond_vignette_act_1">
             <img class="activites_ville" src="images/activites/small/vieux_port.jpg" alt=photo_vieux_port/>
           <div class="description_vignette_act">
           <h3>Vieux Port</h3>
-          </div>
-        </div>
+        </div></a>
     
 
-          <div class="fond_vignette_act_2">
+          <a href="#" class="fond_vignette_act_2">
             <img class="activites_ville" src="images/activites/small/fort_pomegues.jpg" alt=photo_fort_pomegues/>
           <div class="description_vignette_act">
           <h3>Fort de Pomègues</h3>
-          </div>
-        </div>
+        </div></a>
 
-          <div class="fond_vignette_act_3">
+          <a href="#" class="fond_vignette_act_3">
             <img class="activites_ville" src="images/activites/small/iles_frioul.jpg" alt=photo_iles_frioul/>
           <div class="description_vignette_act">
           <h3>Iles du Frioul</h3>
-          </div>
-        </div>
+        </div></a>
 
-          <div class="fond_vignette_act_1">
+          <a href="#" class="fond_vignette_act_1">
             <img class="activites_ville" src="images/activites/small/parc_calanques.jpg" alt=photo_parc_calanques/>
           <div class="description_vignette_act">
           <h3>Parc national des Calanques</h3>
-          </div>
-        </div>
+        </div></a>
 
-          <div class="fond_vignette_act_3">
+          <a href="#" class="fond_vignette_act_3">
             <img class="activites_ville" src="images/activites/small/ND_garde.jpg" alt=photo_ND_garde/>
           <div class="description_vignette_act">
           <h3>Notre-Dame-de-la-Garde</h3>
-          </div>
-        </div>
+        </div></a>
 
-          <div class="fond_vignette_act_2">
+          <a href="#" class="fond_vignette_act_2">
             <img class="activites_ville" src="images/activites/small/parc_longchamp.jpg" alt=photo_parc_longchamp/>
           <div class="description_vignette_act">
           <h3>Parc Longchamp</h3>
-          </div>
-        </div>
+        </div></a>
       </div>
 
 </section>
