refonte menu et header

--- a/index.html
+++ b/index.html
@@ -11,23 +11,19 @@
 
  <!-- EN-TETE PAGE  -->
   
-  <header>
+<header>
+
 
 <div id="en_tete">
-    <img src="images/logo/Reservia.svg" alt="logo Reservia" id="logo"/>
-    
-    <div id="inscription">
-      <a href="#"><strong>S'inscrire</strong></a>
-    </div>
-    </div>
 
-    <nav>
-      <div id="navigation">
-        <ul>
-          <li><a href="#ancre_hebergement">Hébergements</a></li>
-        <li><a href="#ancre_activite">Activités</a></li>
-      </ul>
+   <img src="images/logo/Reservia.svg" alt="logo Reservia" id="logo"/>
+    <a id="inscription" href="#"><strong>S'inscrire</strong></a>
+
+    <nav id="navigation">
+        <a id="menu_heb" href="#ancre_hebergement">Hébergements</a>
+        <a id="menu_act" href="#ancre_activite">Activités</a>
     </nav>
+</div>
 
   </header>
 
@@ -47,10 +43,13 @@
         <input type="submit" value="Rechercher"/>
       </form>
   </div>
+</section>
 
 <!-- filtres -->
 
-      <h3>Filtres</h3>
+<section id="section_filtres">
+
+    <h3>Filtres</h3>
 
 <div id="filtres"> 
 
@@ -90,6 +89,7 @@
       </div></a>
   </div>
 </div>
+</section>
 
 <div id="informations">
   <div id="icone_info">
@@ -100,7 +100,7 @@
 </div>
 
   </div>
-</section>
+
 
 <!-- Les plus populaires -->
 
