--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
  <!-- EN-TETE PAGE  -->
   
 <header>
+    
+    <nav>
 
-
-<div id="en_tete">
-
-   <img src="images/logo/Reservia.svg" alt="logo Reservia" id="logo"/>
-    <a id="inscription" href="#"><strong>S'inscrire</strong></a>
-
-    <nav id="navigation">
+        <img src="images/logo/Reservia.svg" alt="logo Reservia" id="logo"/>
+        <a id="inscription" href="#"><strong>S'inscrire</strong></a>
         <a id="menu_heb" href="#ancre_hebergement">Hébergements</a>
         <a id="menu_act" href="#ancre_activite">Activités</a>
     </nav>
-</div>
 
   </header>
 
@@ -118,7 +114,7 @@
       <img class="hebergements_pop" src="images/hebergements/small/hotel_soleil.jpg" alt=photo_hotel_soleil_du_matin />
 
     <div class="description_vignette_pop">
-          <h3>Hôtel Le Soleil du matin</h3>
+          <h4>Hôtel Le Soleil du matin</h4>
           <p>Nuit à partir de 128€</p>
     </div>
 
@@ -131,7 +127,7 @@
         <img class="hebergements_pop" src="images/hebergements/small/hotel_coeur_eau.jpg" alt=photo_hotel_coeur_eau/>
 
     <div class="description_vignette_pop">
-          <h3>Au cœur de l'eau Chambres d'hôtes</h3>
+          <h4>Au cœur de l'eau Chambres d'hôtes</h4>
           <p>Nuit à partir de 71€</p>
     </div>
 
@@ -150,7 +146,7 @@
       <a href="#"><div class="fond_vignette_pop">
         <img class="hebergements_pop" src="images/hebergements/small/hotel_bleu_blanc.jpg" alt=photo_hotel_bleu_blanc/>
         <div class="description_vignette_pop">
-          <h3>Hôtel Tout bleu et Blanc</h3>
+          <h4>Hôtel Tout bleu et Blanc</h4>
           <p>Nuit à partir de 68€</p>
           </div>
           <div class="avis">
@@ -173,7 +169,7 @@
           <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/auberge_cannebiere.jpg" alt=photo_auberge_cannebiere/>
   <div class="description_vignette_heb">
-          <h3>Auberge La Cannebière</h3>
+          <h4>Auberge La Cannebière</h4>
           <p>Nuit à partir de 25€</p>
           </div>
 
@@ -194,7 +190,7 @@
           <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_port.jpg" alt=photo_hotel_port/>
           <div class="description_vignette_heb">
-          <h3>Hôtel du Port</h3>
+          <h4>Hôtel du Port</h4>
           <p>Nuit à partir de 52€</p>
           </div>
           <div class="avis">
@@ -205,7 +201,7 @@
           <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_mouette.jpg" alt=photo_hotel_mouette/>
           <div class="description_vignette_heb">
-          <h3>Hôtel Les mouettes</h3>
+          <h4>Hôtel Les mouettes</h4>
           <p>Nuit à partir de 76€</p>
           </div>
           <div class="avis">
@@ -222,7 +218,7 @@
           <a href="#"class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_mer.jpg" alt=photo_hotel_mer/>
           <div class="description_vignette_heb">
-          <h3>Hôtel de la mer</h3>
+          <h4>Hôtel de la mer</h4>
           <p>Nuit à partir de 46€</p>
           </div>
           <div class="avis">
@@ -239,7 +235,7 @@
           <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/auberge_panier.jpg" alt=photo_auberge_panier/>
           <div class="description_vignette_heb">
-          <h3>Auberge Le Panier</h3>
+          <h4>Auberge Le Panier</h4>
           <p>Nuit à partir de 23€</p>
           </div>
           <div class="avis">
@@ -257,7 +253,7 @@
           <a href="#" class="fond_vignette_heb">
           <img class="hebergements_ville" src="images/hebergements/small/hotel_amina.jpg" alt=photo_hotel_amina/>
           <div class="description_vignette_heb">
-          <h3>Hôtel Chez Amina</h3>
+          <h4>Hôtel Chez Amina</h4>
           <p>Nuit à partir de 96€</p>
           </div>
           <div class="avis">
@@ -281,38 +277,38 @@
           <a href="#" class="fond_vignette_act_1">
             <img class="activites_ville" src="images/activites/small/vieux_port.jpg" alt=photo_vieux_port/>
           <div class="description_vignette_act">
-          <h3>Vieux Port</h3>
+          <h4>Vieux Port</h4>
         </div></a>
     
 
           <a href="#" class="fond_vignette_act_2">
             <img class="activites_ville" src="images/activites/small/fort_pomegues.jpg" alt=photo_fort_pomegues/>
           <div class="description_vignette_act">
-          <h3>Fort de Pomègues</h3>
+          <h4>Fort de Pomègues</h4>
         </div></a>
 
           <a href="#" class="fond_vignette_act_3">
             <img class="activites_ville" src="images/activites/small/iles_frioul.jpg" alt=photo_iles_frioul/>
           <div class="description_vignette_act">
-          <h3>Iles du Frioul</h3>
+          <h4>Iles du Frioul</h4>
         </div></a>
 
           <a href="#" class="fond_vignette_act_1">
             <img class="activites_ville" src="images/activites/small/parc_calanques.jpg" alt=photo_parc_calanques/>
           <div class="description_vignette_act">
-          <h3>Parc national des Calanques</h3>
+          <h4>Parc national des Calanques</h4>
         </div></a>
 
           <a href="#" class="fond_vignette_act_3">
             <img class="activites_ville" src="images/activites/small/ND_garde.jpg" alt=photo_ND_garde/>
           <div class="description_vignette_act">
-          <h3>Notre-Dame-de-la-Garde</h3>
+          <h4>Notre-Dame de la Garde</h4>
         </div></a>
 
           <a href="#" class="fond_vignette_act_2">
             <img class="activites_ville" src="images/activites/small/parc_longchamp.jpg" alt=photo_parc_longchamp/>
           <div class="description_vignette_act">
-          <h3>Parc Longchamp</h3>
+          <h4>Parc Longchamp</h4>
         </div></a>
       </div>
 
