mise en forme formulaire

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </div>
       <form method="post" action="traitement.php">
         <input type="search" placeholder="Marseille,France"/>
-        <input type="submit" value="Rechercher"/>
-        <i class="fas fa-search"></i>
+        <button type="submit"><i class="fas fa-search"></i><div id="hidden_text">Rechercher</div></button>
+        
       </form>
   </div>
 </section>
