--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
 					<div id="all_vignettes_pop">
 						<a href="#">
 							<div class="fond_vignette_pop">
-								<img class="hebergements_pop" 
-								srcset="images/hebergements/small/hotel_soleil.jpg 532w,images/hebergements/medium/hotel_soleil.jpg 1063w,images/hebergements/large/hotel_soleil.jpg 2125w" sizes="100vw" 
-								src="images/hebergements/small/hotel_soleil.jpg" alt=photo_hotel_soleil_du_matin />
+								<img class="hebergements_pop" src="images/hebergements/medium/hotel_soleil.jpg" alt=photo_hotel_soleil_du_matin />
 								<div class="description_vignette_pop">
 									<h4>Hôtel Le Soleil du matin</h4>
 									<p>
@@ -129,10 +127,7 @@
 						</a>
 						<a href="#">
 							<div class="fond_vignette_pop">
-								<img class="hebergements_pop"
-								srcset="images/hebergements/small/hotel_coeur_eau.jpg.jpg 504w,images/hebergements/medium/hotel_coeur_eau.jpg 1008w,images/hebergements/large/hotel_coeur_eau.jpg 2016w" 
-								sizes="100vw" 
-								src="images/hebergements/small/hotel_coeur_eau.jpg" alt=photo_hotel_coeur_eau.jpg/> 
+								<img class="hebergements_pop" src="images/hebergements/medium/hotel_coeur_eau.jpg" alt=photo_hotel_coeur_eau.jpg/> 
 
 								<div class="description_vignette_pop">
 									<h4>Au cœur de l'eau Chambres d'hôtes</h4>
@@ -155,9 +150,7 @@
 						</a>
 						<a href="#">
 							<div class="fond_vignette_pop">
-								<img class="hebergements_pop"
-								srcset="images/hebergements/small/hotel_bleu_blanc.jpg 532w,images/hebergements/medium/hotel_bleu_blanc.jpg 1063w,images/hebergements/large/hotel_bleu_blanc.jpg 2125w" sizes="100vw" 
-								src="images/hebergements/small/hotel_bleu_blanc.jpg" alt=photo_hotel_bleu_blanc.jpg/>
+								<img class="hebergements_pop"src="images/hebergements/medium/hotel_bleu_blanc.jpg" alt=photo_hotel_bleu_blanc.jpg/>
 								<div class="description_vignette_pop">
 									<h4>Hôtel Tout bleu et Blanc</h4>
 									<p>
@@ -180,9 +173,7 @@
 					<h2 id="ancre_hebergement">Hébergements à Marseille</h2>
 					<div id="all_vignettes_heb">
 						<a href="#" class="fond_vignette_heb">
-							<img class="hebergements_ville" 
-							srcset="images/hebergements/small/auberge_cannebiere.jpg 532w,images/hebergements/medium/auberge_cannebiere.jpg 1063w,images/hebergements/large/auberge_cannebiere.jpg 2125w" sizes="100vw"
-							src="images/hebergements/small/auberge_cannebiere.jpg" alt=photo_auberge_cannebiere/>
+							<img class="hebergements_ville" src="images/hebergements/medium/auberge_cannebiere.jpg" alt=photo_auberge_cannebiere/>
 							<div class="description_vignette_heb">
 								<h4>Auberge La Cannebière</h4>
 								<p>
@@ -202,7 +193,7 @@
 							</div>
 						</a>
 						<a href="#" class="fond_vignette_heb">
-							<img class="hebergements_ville" src="images/hebergements/small/hotel_port.jpg" alt=photo_hotel_port/>
+							<img class="hebergements_ville" src="images/hebergements/medium/hotel_port.jpg" alt=photo_hotel_port/>
 							<div class="description_vignette_heb">
 								<h4>Hôtel du Port</h4>
 								<p>
@@ -218,7 +209,7 @@
 							</div>
 						</a>
 						<a href="#" class="fond_vignette_heb">
-							<img class="hebergements_ville" src="images/hebergements/small/hotel_mouette.jpg" alt=photo_hotel_mouette/>
+							<img class="hebergements_ville" src="images/hebergements/medium/hotel_mouette.jpg" alt=photo_hotel_mouette/>
 							<div class="description_vignette_heb">
 								<h4>Hôtel Les mouettes</h4>
 								<p>
@@ -238,7 +229,7 @@
 							</div>
 						</a>
 						<a href="#" class="fond_vignette_heb">
-							<img class="hebergements_ville" src="images/hebergements/small/hotel_mer.jpg" alt=photo_hotel_mer/>
+							<img class="hebergements_ville" src="images/hebergements/medium/hotel_mer.jpg" alt=photo_hotel_mer/>
 							<div class="description_vignette_heb">
 								<h4>Hôtel de la mer</h4>
 								<p>
@@ -258,7 +249,7 @@
 							</div>
 						</a>
 						<a href="#" class="fond_vignette_heb">
-							<img class="hebergements_ville" src="images/hebergements/small/auberge_panier.jpg" alt=photo_auberge_panier/>
+							<img class="hebergements_ville" src="images/hebergements/medium/auberge_panier.jpg" alt=photo_auberge_panier/>
 							<div class="description_vignette_heb">
 								<h4>Auberge Le Panier</h4>
 								<p>
@@ -278,7 +269,7 @@
 							</div>
 						</a>
 						<a href="#" class="fond_vignette_heb">
-							<img class="hebergements_ville" src="images/hebergements/small/hotel_amina.jpg" alt=photo_hotel_amina/>
+							<img class="hebergements_ville" src="images/hebergements/medium/hotel_amina.jpg" alt=photo_hotel_amina/>
 							<div class="description_vignette_heb">
 								<h4>Hôtel Chez Amina</h4>
 								<p>
@@ -302,37 +293,37 @@
 				<h2 id="ancre_activite">Activités à Marseille</h2>
 				<div id="all_vignettes_act">
 					<a href="#" class="fond_vignette_act_1">
-						<img class="activites_ville" src="images/activites/small/vieux_port.jpg" alt=photo_vieux_port/>
+						<img class="activites_ville" src="images/activites/medium/vieux_port.jpg" alt=photo_vieux_port/>
 						<div class="description_vignette_act">
 							<p>Vieux Port</p>
 						</div>
 					</a>
 					<a href="#" class="fond_vignette_act_2">
-						<img class="activites_ville" src="images/activites/small/fort_pomegues.jpg" alt=photo_fort_pomegues/>
+						<img class="activites_ville" src="images/activites/medium/fort_pomegues.jpg" alt=photo_fort_pomegues/>
 						<div class="description_vignette_act">
 							<p>Fort de Pomègues</p>
 						</div>
 					</a>
 					<a href="#" class="fond_vignette_act_3">
-						<img class="activites_ville" src="images/activites/small/iles_frioul.jpg" alt=photo_iles_frioul/>
+						<img class="activites_ville" src="images/activites/medium/iles_frioul.jpg" alt=photo_iles_frioul/>
 						<div class="description_vignette_act">
 							<p>Iles du Frioul</p>
 						</div>
 					</a>
 					<a href="#" class="fond_vignette_act_1">
-						<img class="activites_ville" src="images/activites/small/parc_calanques.jpg" alt=photo_parc_calanques/>
+						<img class="activites_ville" src="images/activites/medium/parc_calanques.jpg" alt=photo_parc_calanques/>
 						<div class="description_vignette_act">
 							<p>Parc national des Calanques</p>
 						</div>
 					</a>
 					<a href="#" class="fond_vignette_act_3">
-						<img class="activites_ville" src="images/activites/small/ND_garde.jpg" alt=photo_ND_garde/>
+						<img class="activites_ville" src="images/activites/medium/ND_garde.jpg" alt=photo_ND_garde/>
 						<div class="description_vignette_act">
 							<p>Notre-Dame de la Garde</p>
 						</div>
 					</a>
 					<a href="#" class="fond_vignette_act_2">
-						<img class="activites_ville" src="images/activites/small/parc_longchamp.jpg" alt=photo_parc_longchamp/>
+						<img class="activites_ville" src="images/activites/medium/parc_longchamp.jpg" alt=photo_parc_longchamp/>
 						<div class="description_vignette_act">
 							<p>Parc Longchamp</p>
 						</div>
